# csv-dataclass-gen

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/actions/lint/: action.yml
.github/actions/setup/: action.yml
.github/actions/test/: action.yml
.github/workflows/: lint.yml  main.yml  publish.yml  test.yml
generator/: cli.py  code_generator.py  csv_analyzer.py  name_sanitizer.py  type_inferrer.py
generator/templates/: dataclass_template.py.jinja2
tests/: __init__.py  test_code_gen_e2e.py  test_csv_analyzer.py  test_name_sanitizer.py  test_type_inferrer.py
tests/data/: test_data.csv  test_data.tsv
