[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csv-dataclass-gen"
version = "0.1.1"
description = "Generate Python dataclasses, loaders, from CSV/TSV files"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "khwong-c", email = "kin.hin.wong.c@gmail.com" }]
license = { file = "LICENSE" }
dependencies = [
    "Jinja2>=3.1.0",
    "click>=8.1.0",
    "click-log>=0.4.0",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Environment :: Console",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
     # Licensing
    "License :: OSI Approved :: MIT License",

    # Operating system
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/khwong-c/csv-dataclass-gen"
Repository = "https://github.com/khwong-c/csv-dataclass-gen"
"Issue Tracker" = "https://github.com/khwong-c/csv-dataclass-gen/issues"

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "test" }
]
lint = [
    "ruff"
]
test = [
    "pytest"
]


[project.scripts]
csv-dataclass-gen = "generator.cli:generate"

[tool.setuptools.packages.find]
include = ["generator*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
